WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120028
ASSERTION FAILED: m_history->provisionalItem() == m_requestedHistoryItem.get() when navigating to an uncached subframe
https://bugs.webkit.org/show_bug.cgi?id=120028
Summary
ASSERTION FAILED: m_history->provisionalItem() == m_requestedHistoryItem.get(...
Alexey Proskuryakov
Reported
2013-08-19 14:02:24 PDT
As seen in
bug 119915
, caching failure results in an assertion here. This can happen in normal browsing too, not only in WKTR.
Attachments
proposed fix
(8.16 KB, patch)
2013-08-19 14:18 PDT
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
also delete unneeded code
(10.85 KB, patch)
2013-08-19 15:12 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-08-19 14:18:53 PDT
Created
attachment 209123
[details]
proposed fix It's not super clear to me whether it's intentional or a mistake that this variable is not set for subframes. The only other place where it is used is HistoryController::restoreDocumentState(), and I couldn't make a test case that would show any effect this patch could have on form value restoration. Hopefully, there is no effect.
Alexey Proskuryakov
Comment 2
2013-08-19 15:12:04 PDT
Created
attachment 209130
[details]
also delete unneeded code
WebKit Commit Bot
Comment 3
2013-08-19 16:40:13 PDT
Comment on
attachment 209130
[details]
also delete unneeded code Clearing flags on attachment: 209130 Committed
r154306
: <
http://trac.webkit.org/changeset/154306
>
WebKit Commit Bot
Comment 4
2013-08-19 16:40:15 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 5
2013-08-20 23:33:42 PDT
The test added by this patch is failing on GTK+, Qt, and EFL bots:
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Fnavigation%2Fpost-frames-goback1-uncached.html
e.g.
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20WK1/r154378%20(3715)/results.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug